--- a/CurrencyConverter/app/src/main/res/values/strings.xml
+++ b/CurrencyConverter/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Currency Converter</string>
     <string name="editTextCurrency">Currency to Convert</string>
-    <string name="toDollars">Euros to Dollars</string>
-    <string name="toEuros">Dollars To Euros</string>
+    <string name="toDollars">Euros to US Dollars</string>
+    <string name="toEuros">US Dollars To Euros</string>
 </resources>
