--- a/FinalProject/Sprint1/app/src/main/res/values/strings.xml
+++ b/FinalProject/Sprint1/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">RowReduction</string>
+    <string name="app_name">Row Reduction</string>
     <string name="del">DEL</string>
     <string name="PlusMinus">+/-</string>
     <string name="XVariable">x</string>
@@ -17,5 +17,26 @@
     <string name="_8">8</string>
     <string name="_9">9</string>
     <string name="Plus">+</string>
+    <string name="addEquation">+E</string>
+    <string name="subtractEquation">-E</string>
+    <string name="addVariable">+V</string>
+    <string name="subtractVariable">-V</string>
+    <string name="slash">/</string>
+    <string name="decimal">.</string>
     <string name="SetupMatrixButton">Setup Augmented Matrix</string>
+    <string name="leftArrow">Left Arrow</string>
+    <string name="rightArrow">Right Arrow</string>
+
+    <string name="hint">Hint</string>
+    <string name="undo">Undo</string>
+    <string name="swapRowsButton">Swap Rows Button</string>
+    <string name="multiplyByConstantButton">Multiply By Constant Button</string>
+    <string name="rowPlusConstantRow">Row Plus Constant Row</string>
+
+    <string name="row1">Row 1</string>
+    <string name="row2">Row 2</string>
+    <string name="row3">Row 3</string>
+
+    <string name="cancel">Cancel</string>
+    <string name="confirm">Confirm</string>
 </resources>
